# plants_FastAPI

./: .gitignore  alembic.ini  makefile  pyproject.toml  sensor_data.db
alembic/versions/: 2024_04_07_1135-4d4d55f8494f_create_tables.py  2024_04_07_1142-8263386f5bc9_create_tables_2.py
app/: crud.py  database.py  main.py  models.py  schemas.py
