[tool.poetry]
name = "fast-api-plants"
version = "0.1.0"
description = "A FastAPI version of the plant server"
authors = ["Carlos García Ling <carlos.gling@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
databases = {extras = ["sqlite"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
